@@ -1,5 +1,6 @@
 ChangeLog
 ==========
+- add target = library to iRODS meta data for single lane crams meeting lane fraction criteria
 - use lane fraction rather than minimum component count
 - allow for re-headering of merged library crams 
 - temporary fix for bam_flagstats input file check
